# PAT

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  README.md
DSA/7-35/: makefile
DSA_en/: README.md
DSA_en/7-35/: 7-35.cpp  README.md  autotest.sh
DSA_en/7-35/tests/: 1_temp.out
DSA_en/cpp/: 7_1.cpp
DSA_en/python/: 7_1.py
PATA/: README.md
PATB/: Makefile  README.md  patb_1017.cpp  patb_1019.cpp  patb_1024.cpp  patb_1028.cpp  patb_1029.cpp  patb_1030.cpp  patb_1036.cpp  patb_1037.cpp  patb_1039.cpp  patb_1085.cpp  patb_1118.cpp
PATB/cpp/: Makefile  [WIP]patb_1123.cpp  patb_1007.cpp  patb_1010.cpp  patb_1012.cpp  patb_1013.cpp  patb_1013_2.cpp  patb_1015.cpp  patb_1033.cpp  patb_1034.cpp  patb_1035.cpp  patb_1036.cpp  patb_1037.cpp  patb_1040.cpp  patb_1043.cpp  patb_1044.cpp  patb_1045.cpp  patb_1046.cpp  patb_1048.cpp  patb_1049.cpp  patb_1050.cpp  patb_1052.cpp  patb_1053.cpp  patb_1054.cpp  patb_1055.cpp  patb_1057.cpp  patb_1058.cpp  patb_1059.cpp  patb_1060.cpp  patb_1062.cpp  patb_1063.cpp  patb_1066.cpp  patb_1068.cpp  patb_1069.cpp  patb_1073.cpp  patb_1074.cpp  patb_1075.cpp  patb_1076.cpp  patb_1077.cpp  patb_1079.cpp  (+8 more)
PATB/go/: README.md  patb_1001.go
PATB/java/: Main.java
PATB/python/: patb_1007.py  patb_1010.py  patb_1012.py  patb_1013.py
PATB/rust/: patb_1002.rs
Team/: Cargo.toml  README.md  l1_074.rs  l1_077.rs  l1_081.rs  l1_082.rs  l1_084.rs  l1_091.rs  l1_092.rs  l1_093.rs  l1_097.rs  l1_098.rs
pat_basic/: patb_1013.cpp
